// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate e2e tests,
// which are released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/e2e/blob/main/LICENSE

syntax = "proto3";

option java_package = "dev.restate.e2e.services.upgradetest";
option java_outer_classname = "UpgradeTestProto";

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";

package upgrade_test;

service UpgradeTestService {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc ExecuteSimple(google.protobuf.Empty) returns (Result);
  rpc ExecuteComplex(google.protobuf.Empty) returns (Result);
}

message Result {
  string message = 1;
}
